added table to sales data, refactored code

--- a/index.html
+++ b/index.html
@@ -8,25 +8,33 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-  <script src="app.js"></script>
   <title>Pat's Salmon Cookies</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Pat's Salmon Cookies!</h1>
-        <nav>
-          <span>
-            <a href="index.html">Home</a>
-            <a href="sales.html">Sales Data</a>
-          </span>
-        </nav>
-    </header>
-    <main>
+  <body>
 
+    <header>
+      <h1>Pat's Salmon Cookies</h1>
+       <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="sales2.html">Sales Data</a></li>
+        </ul>
+       </nav>
+    </header>
+
+    <main>
+      <div id="root">
+        <section class="hero">
+          <img src="images/salmon.png" />
+        </section>
+      </div>
     </main>
+
     <footer>
-      <p> &copy; 2023 Pat's Salmon Cookies</p>
+      &copy; 2023 Pat's Salmon Cookies
     </footer>
 
-</body>
+    <script src="home.js"></script>
+  </body>
 </html>
