--- a/sales2.html
+++ b/sales2.html
@@ -21,31 +21,38 @@
         </nav>
     </header>
     <main>
-      <section class="deck">
-        <div id="seattleCard" class="card">
-          <h2>Seattle</h2>
-        </div>
-        <div id="tokyoCard" class="card">
-          <h2>Tokyo</h2>
-        </div>
-        <div id="dubaiCard" class="card">
-          <h2>Dubai</h2>
-        </div>
-        <div id="parisCard" class="card">
-          <h2>Paris</h2>
-        </div>
-        <div id="limaCard" class="card">
-          <h2>Lima</h2>
-        </div>
-        <div id="testCityCard" class="card">
-          <h2>Test City</h2>
-        </div>
-      </section>
+      <table id="myTable">
+        <thead>
+          <tr>
+            <th>Locations</th>
+            <th>6am</th>
+            <th>7am</th>
+            <th>8am</th>
+            <th>9am</th>
+            <th>10am</th>
+            <th>11am</th>
+            <th>12pm</th>
+            <th>1pm</th>
+            <th>2pm</th>
+            <th>3pm</th>
+            <th>4pm</th>
+            <th>5pm</th>
+            <th>6pm</th>
+            <th>Location Totals</th>
+          </tr>
+        </thead>
+        <tbody id="stores">
+
+        </tbody>
+        <tfoot id="hourTotals">
+
+        </tfoot>
+      </table>
     </main>
     <footer>
       <span> &copy; 2023 Pat's Salmon Cookies</span>
     </footer>
-    <script src="app.js"></script>
+    <script src="sales2.js"></script>
 
 </body>
 </html>
