--- a/sales2.html
+++ b/sales2.html
@@ -11,15 +11,15 @@
     <title>Pat's Salmon Cookies</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Pat's Salmon Cookies!</h1>
-        <nav>
-          <span>
-            <a href="index.html">Home</a>
-            <a href="sales.html">Sales Data</a>
-          </span>
-        </nav>
-    </header>
+  <header>
+    <h1>Pat's Salmon Cookies</h1>
+     <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sales2.html">Sales Data</a></li>
+      </ul>
+     </nav>
+  </header>
     <main>
       <table id="myTable">
         <thead>
