added forms to sales data page, fixed css for home page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     </main>
 
     <footer>
-      &copy; 2023 Pat's Salmon Cookies
+      <p>
+
+        &copy; 2023 Pat's Salmon Cookies
+      </p>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="JS/home.js"></script>
   </body>
 </html>
